fixed some names

--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
             </div>
 
             <p class="end">Design By<span><i class="fa-regular fa-face-grin"></i>
-            WT Master Code</span></p>
+            Shazad Khan</span></p>
 
 
         </div>
